# news-intel-api

./: .dockerignore  .env  .env.example  .gitignore  BUILD_ORDER.md  CLAUDE.md  COMPLIANCE.md  DEPLOY.md  DESIGN.md  Dockerfile  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
.claude/: settings.local.json
apps/: access_store.py  dev_seed.py  events.py  ingest.py  repository.py  scheduler.py  sources.py  test_commercial_api.py  test_dev_seed.py  test_enrichment_api.py  test_events_api.py  test_ingest.py  test_scheduler.py  test_trending_api.py  test_webhook_dispatch.py  trending.py  webhook_dispatch.py
apps/api/: config.py  main.py
apps/worker/: main.py
docs/: SPEC.md
news_intel_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: test_event_gold.py  test_nlp_gold.py  test_trending_regression.py
tests/fixtures/event_gold/: articles.json
tests/fixtures/feeds/: antara_sample.expected.json  antara_sample.xml  tribun_sample.xml
tests/fixtures/nlp_gold/: articles.json
tests/fixtures/trending_regression/: kpk_case_20260615.json
