[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "news-intel-api"
version = "0.1.0"
description = "Indonesia News Intelligence API — metadata & intelligence layer, not a republisher."
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "sqlalchemy>=2.0",
    "psycopg[binary]>=3.2",
    "pgvector>=0.3",
    "redis>=5.0",
    "apscheduler>=3.10",
    "httpx>=0.27",
    "feedparser>=6.0",
    "selectolax>=0.3",      # fast HTML parsing for excerpt/lede extraction
    "python-dateutil>=2.9",
    "tzdata>=2024.1",       # zoneinfo DB for WIB/WITA/WIT on slim base images
]

[project.optional-dependencies]
nlp = [
    "transformers>=4.44",   # IndoBERT-style NER fallback
    "sentence-transformers>=3.0",  # multilingual-e5 embeddings (event tie-break)
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "mypy>=1.11",
]

# ─── Packaging ───────────────────────────────────────────────────────────────
# `apps` is the installable application package. `packages/` (Layer A) is a
# regular package tree imported as `packages.<sub>.<mod>`; it ships in the image
# via COPY + PYTHONPATH=/app rather than being pip-installed, so Layer A stays a
# vendored, test-pinned core rather than a published distribution.
[tool.setuptools]
packages = ["apps", "apps.api", "apps.worker"]

# ─── Ruff ─────────────────────────────────────────────────────────────────────
[tool.ruff]
target-version = "py312"
line-length = 100
src = ["apps", "packages"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]
# Ambiguous-unicode lints fire on intentional typographic characters (curly
# quotes, en/em dashes) that the NLP cleaner and Indonesian fixtures must carry.
ignore = ["RUF001", "RUF002", "RUF003"]

# ─── Mypy: strict on the deterministic core ──────────────────────────────────
[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
# Layer A (packages/) must be fully typed. Third-party stubs may be missing.
[[tool.mypy.overrides]]
module = ["feedparser.*", "selectolax.*", "pgvector.*", "apscheduler.*"]
ignore_missing_imports = true

# ─── Pytest ──────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["packages", "apps", "tests"]
python_files = ["test_*.py"]
pythonpath = ["."]
addopts = "-q"

[tool.coverage.run]
# Layer A is where coverage matters most.
source = ["packages"]
